--- a/Tinder/index.html
+++ b/Tinder/index.html
@@ -27,7 +27,7 @@
       </h1>
       <img
         src="https://believemy.com/uploads/9d68712374e3b4d98b40c9680ce71df1_0cbd495042b88ce8c3c3ac834da275a7.png"
-        class="w-50 mx-auto d-block"
+        class="w-50 mx-auto d-block" alt="Image de trois téléphone avec tinder"
       />
     </section>
 
