link to projet Tesla

--- a/Tesla/index.html
+++ b/Tesla/index.html
@@ -79,7 +79,7 @@
       <div class="container">
         <div class="row mb-3 gy-4">
           <!-- ICI : les cartes -->
-          <div class="col-md-6">
+          <div class="col-md-6 order-md-1 order-2">
             <div class="card bg-secondary text-white">
               <img
                 src="https://believemy.com/uploads/c7fe8837368024dc01e1845337f167e9_18fb807dabb97a3e4f920d1b0c9176b1.png"
@@ -95,7 +95,7 @@
             </div>
           </div>
 
-          <div class="col-md-6">
+          <div class="col-md-6 order-md-2 order-1">
             <div class="card bg-secondary text-white">
               <img
                 src="https://believemy.com/uploads/c7fe8837368024dc01e1845337f167e9_18fb807dabb97a3e4f920d1b0c9176b1.png"
