--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Bootstrap Training</title>
 </head>
 <body>
-    <a href="./Tinder/index.html">Tinder</a>
+    <a href="./Tinder/index.html">Tinder</a><br>
+    <a href="./Tesla/index.html">Tinder</a><br>
 </body>
 </html>
