link to projet Tesla

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <a href="./Tinder/index.html">Tinder</a><br>
-    <a href="./Tesla/index.html">Tinder</a><br>
+    <a href="./Tesla/index.html">Tesla</a><br>
 </body>
 </html>
